# energy-prices

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: Dockerfile
docs/: backtest_gas_psv.md  backtest_pun_real.md  product-roadmap.md
scripts/: backtest_gas_psv.py  backtest_real_pun.py  confirm_cqr_gas.py  migrate_sqlite_to_postgres.py  rebacktest_matrix.py
src/energy_prices/: __init__.py  _tls.py  alerts.py  cli.py  notifications.py
src/energy_prices/config/: __init__.py  enums.py  settings.py
src/energy_prices/dashboard/: __init__.py  app.py
src/energy_prices/features/: __init__.py  build.py  calendar.py
src/energy_prices/forecasting/: __init__.py  evaluation.py  runner.py
src/energy_prices/ingestion/: __init__.py  demo.py  entsoe_client.py  gie_client.py  gme_client.py  scheduler.py  ttf_client.py  weather_client.py
src/energy_prices/models/: __init__.py  base.py  baseline.py  calibration.py  ensemble.py  gas_sarimax.py  lear.py  lgbm.py  psv_basis.py
src/energy_prices/storage/: __init__.py  db.py  models.py  repositories.py
tests/: conftest.py  test_cli.py  test_evaluation.py  test_ingestion_parsers.py  test_notifications.py  test_postgres_timescale.py  test_runner_storage.py  test_scheduler.py  test_smoke.py
